--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Random Cat Facts  </title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="container">
     <header>
         <div class="header"><h3>Random Cat Facts</h3></div>
     </header>
